// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateInvoiceSvg — snapshot > custom dimensions output is stable 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 300" width="400" height="300" role="img" aria-labelledby="kg-INV20240001-title kg-INV20240001-desc">
  <title id="kg-INV20240001-title">Invoice INV-2024-0001 — Safaricom PLC</title>
  <desc id="kg-INV20240001-desc">Kora Protocol invoice NFT for $250.0K USDC due Mar 1, 2025</desc>

  <defs>
    <!-- Background gradient -->
    <linearGradient id="kg-INV20240001-bg" x1="0%" y1="0%" x2="100%" y2="100%">
      <stop offset="0%" stop-color="#09090b" />
      <stop offset="100%" stop-color="#0f0f12" />
    </linearGradient>
    <!-- Primary accent gradient -->
    <linearGradient id="kg-INV20240001-accent" x1="0%" y1="0%" x2="100%" y2="0%">
      <stop offset="0%" stop-color="#38bdf8" stop-opacity="0.8" />
      <stop offset="100%" stop-color="#38bdf8" stop-opacity="0.6" />
    </linearGradient>
    <!-- Glow filter -->
    <filter id="kg-INV20240001-glow" x="-20%" y="-20%" width="140%" height="140%">
      <feGaussianBlur stdDeviation="8" result="blur" />
      <feComposite in="SourceGraphic" in2="blur" operator="over" />
    </filter>
    <!-- Clip path for rounded card -->
    <clipPath id="kg-INV20240001-clip">
      <rect width="400" height="300" rx="16" ry="16" />
    </clipPath>
  </defs>

  <!-- Background -->
  <rect width="400" height="300" fill="url(#kg-INV20240001-bg)" rx="16" ry="16" />

  <!-- Decorative glow orbs -->
  <circle cx="340" cy="45" r="72" fill="#38bdf8" opacity="0.06" filter="url(#kg-INV20240001-glow)" />
  <circle cx="40" cy="255" r="56.00000000000001" fill="#38bdf8" opacity="0.05" filter="url(#kg-INV20240001-glow)" />

  <!-- Top accent bar -->
  <rect x="0" y="0" width="400" height="4" fill="url(#kg-INV20240001-accent)" rx="2" />

  <!-- Header section -->
  <rect x="32" y="24" width="336" height="72" rx="10" fill="#18181b" opacity="0.7" />

  <!-- Kora logo mark (stylised "K") -->
  <g transform="translate(52, 44)">
    <rect width="28" height="28" rx="6" fill="#0c4a6e" />
    <text x="14" y="20" font-family="system-ui, -apple-system, sans-serif" font-size="16" font-weight="700" fill="#38bdf8" text-anchor="middle">K</text>
  </g>

  <!-- "Kora Protocol" label -->
  <text x="92" y="54" font-family="system-ui, -apple-system, sans-serif" font-size="13" font-weight="600" fill="#f4f4f5" letter-spacing="0.5">Kora Protocol</text>
  <text x="92" y="72" font-family="system-ui, -apple-system, sans-serif" font-size="10" fill="#71717a" letter-spacing="1">INVOICE NFT</text>

  <!-- Invoice number (top right) -->
  <text x="352" y="54" font-family="ui-monospace, monospace" font-size="11" fill="#a1a1aa" text-anchor="end">INV-2024-0001</text>
  <text x="352" y="72" font-family="system-ui, -apple-system, sans-serif" font-size="10" fill="#71717a" text-anchor="end" letter-spacing="0.5">v1.0</text>

  <!-- Divider -->
  <line x1="32" y1="112" x2="368" y2="112" stroke="#27272a" stroke-width="1" />

  <!-- Debtor name (large) -->
  <text x="48" y="152" font-family="system-ui, -apple-system, sans-serif" font-size="22" font-weight="700" fill="#f4f4f5">Safaricom PLC</text>
  <text x="48" y="174" font-family="system-ui, -apple-system, sans-serif" font-size="12" fill="#71717a">DEBTOR</text>

  <!-- Amount (hero) -->
  <text x="352" y="152" font-family="system-ui, -apple-system, sans-serif" font-size="28" font-weight="800" fill="#f4f4f5" text-anchor="end">$250.0K USDC</text>
  <text x="352" y="174" font-family="system-ui, -apple-system, sans-serif" font-size="12" fill="#71717a" text-anchor="end">INVOICE AMOUNT</text>

  <!-- Divider -->
  <line x1="32" y1="196" x2="368" y2="196" stroke="#27272a" stroke-width="1" />

  <!-- Info grid row 1 -->
  <!-- Due Date -->
  <text x="48" y="228" font-family="system-ui, -apple-system, sans-serif" font-size="10" fill="#71717a" letter-spacing="1">DUE DATE</text>
  <text x="48" y="248" font-family="system-ui, -apple-system, sans-serif" font-size="15" font-weight="600" fill="#f4f4f5">Mar 1, 2025</text>

  <!-- Issuer -->
  <text x="200" y="228" font-family="system-ui, -apple-system, sans-serif" font-size="10" fill="#71717a" letter-spacing="1" text-anchor="middle">ISSUER</text>
  <text x="200" y="248" font-family="system-ui, -apple-system, sans-serif" font-size="13" font-weight="500" fill="#f4f4f5" text-anchor="middle">TechBridge Solutions Ltd</text>

  <!-- Discount Rate / Risk Tier -->
  

  <!-- Divider -->
  <line x1="32" y1="272" x2="368" y2="272" stroke="#27272a" stroke-width="1" />

  <!-- Tags row -->
  

  <!-- IPFS document CID (bottom) -->
  

  <!-- Bottom border accent -->
  <rect x="0" y="296" width="400" height="4" fill="url(#kg-INV20240001-accent)" rx="2" />
</svg>"
`;

exports[`generateInvoiceSvg — snapshot > full metadata output is stable 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 600" width="800" height="600" role="img" aria-labelledby="kg-INV20240001-title kg-INV20240001-desc">
  <title id="kg-INV20240001-title">Invoice INV-2024-0001 — Safaricom PLC</title>
  <desc id="kg-INV20240001-desc">Kora Protocol invoice NFT for $250.0K USDC due Mar 1, 2025</desc>

  <defs>
    <!-- Background gradient -->
    <linearGradient id="kg-INV20240001-bg" x1="0%" y1="0%" x2="100%" y2="100%">
      <stop offset="0%" stop-color="#09090b" />
      <stop offset="100%" stop-color="#0f0f12" />
    </linearGradient>
    <!-- Primary accent gradient -->
    <linearGradient id="kg-INV20240001-accent" x1="0%" y1="0%" x2="100%" y2="0%">
      <stop offset="0%" stop-color="#22d3ee" stop-opacity="0.8" />
      <stop offset="100%" stop-color="#38bdf8" stop-opacity="0.6" />
    </linearGradient>
    <!-- Glow filter -->
    <filter id="kg-INV20240001-glow" x="-20%" y="-20%" width="140%" height="140%">
      <feGaussianBlur stdDeviation="8" result="blur" />
      <feComposite in="SourceGraphic" in2="blur" operator="over" />
    </filter>
    <!-- Clip path for rounded card -->
    <clipPath id="kg-INV20240001-clip">
      <rect width="800" height="600" rx="16" ry="16" />
    </clipPath>
  </defs>

  <!-- Background -->
  <rect width="800" height="600" fill="url(#kg-INV20240001-bg)" rx="16" ry="16" />

  <!-- Decorative glow orbs -->
  <circle cx="680" cy="90" r="144" fill="#22d3ee" opacity="0.06" filter="url(#kg-INV20240001-glow)" />
  <circle cx="80" cy="510" r="112.00000000000001" fill="#38bdf8" opacity="0.05" filter="url(#kg-INV20240001-glow)" />

  <!-- Top accent bar -->
  <rect x="0" y="0" width="800" height="4" fill="url(#kg-INV20240001-accent)" rx="2" />

  <!-- Header section -->
  <rect x="32" y="24" width="736" height="72" rx="10" fill="#18181b" opacity="0.7" />

  <!-- Kora logo mark (stylised "K") -->
  <g transform="translate(52, 44)">
    <rect width="28" height="28" rx="6" fill="#0c4a6e" />
    <text x="14" y="20" font-family="system-ui, -apple-system, sans-serif" font-size="16" font-weight="700" fill="#38bdf8" text-anchor="middle">K</text>
  </g>

  <!-- "Kora Protocol" label -->
  <text x="92" y="54" font-family="system-ui, -apple-system, sans-serif" font-size="13" font-weight="600" fill="#f4f4f5" letter-spacing="0.5">Kora Protocol</text>
  <text x="92" y="72" font-family="system-ui, -apple-system, sans-serif" font-size="10" fill="#71717a" letter-spacing="1">INVOICE NFT</text>

  <!-- Invoice number (top right) -->
  <text x="752" y="54" font-family="ui-monospace, monospace" font-size="11" fill="#a1a1aa" text-anchor="end">INV-2024-0001</text>
  <text x="752" y="72" font-family="system-ui, -apple-system, sans-serif" font-size="10" fill="#71717a" text-anchor="end" letter-spacing="0.5">v1.0</text>

  <!-- Divider -->
  <line x1="32" y1="112" x2="768" y2="112" stroke="#27272a" stroke-width="1" />

  <!-- Debtor name (large) -->
  <text x="48" y="152" font-family="system-ui, -apple-system, sans-serif" font-size="22" font-weight="700" fill="#f4f4f5">Safaricom PLC</text>
  <text x="48" y="174" font-family="system-ui, -apple-system, sans-serif" font-size="12" fill="#71717a">DEBTOR</text>

  <!-- Amount (hero) -->
  <text x="752" y="152" font-family="system-ui, -apple-system, sans-serif" font-size="28" font-weight="800" fill="#f4f4f5" text-anchor="end">$250.0K USDC</text>
  <text x="752" y="174" font-family="system-ui, -apple-system, sans-serif" font-size="12" fill="#71717a" text-anchor="end">INVOICE AMOUNT</text>

  <!-- Divider -->
  <line x1="32" y1="196" x2="768" y2="196" stroke="#27272a" stroke-width="1" />

  <!-- Info grid row 1 -->
  <!-- Due Date -->
  <text x="48" y="228" font-family="system-ui, -apple-system, sans-serif" font-size="10" fill="#71717a" letter-spacing="1">DUE DATE</text>
  <text x="48" y="248" font-family="system-ui, -apple-system, sans-serif" font-size="15" font-weight="600" fill="#f4f4f5">Mar 1, 2025</text>

  <!-- Issuer -->
  <text x="400" y="228" font-family="system-ui, -apple-system, sans-serif" font-size="10" fill="#71717a" letter-spacing="1" text-anchor="middle">ISSUER</text>
  <text x="400" y="248" font-family="system-ui, -apple-system, sans-serif" font-size="13" font-weight="500" fill="#f4f4f5" text-anchor="middle">TechBridge Solutions Ltd</text>

  <!-- Discount Rate / Risk Tier -->
  <text x="752" y="228" font-family="system-ui, -apple-system, sans-serif" font-size="10" fill="#71717a" letter-spacing="1" text-anchor="end">DISCOUNT RATE</text>
  <text x="752" y="248" font-family="system-ui, -apple-system, sans-serif" font-size="15" font-weight="600" fill="#22c55e" text-anchor="end">6.0%</text>

  <!-- Divider -->
  <line x1="32" y1="272" x2="768" y2="272" stroke="#27272a" stroke-width="1" />

  <!-- Tags row -->
  
    <rect x="48" y="292" width="35" height="24" rx="6" fill="#18181b" stroke="#a1a1aa" stroke-width="0.5" stroke-opacity="0.4" />
    <text x="65.5" y="307" font-family="system-ui, -apple-system, sans-serif" font-size="10" font-weight="600" fill="#a1a1aa" text-anchor="middle" letter-spacing="0.3">KE</text>
    <rect x="91" y="292" width="95" height="24" rx="6" fill="#18181b" stroke="#a1a1aa" stroke-width="0.5" stroke-opacity="0.4" />
    <text x="138.5" y="307" font-family="system-ui, -apple-system, sans-serif" font-size="10" font-weight="600" fill="#a1a1aa" text-anchor="middle" letter-spacing="0.3">Technology</text>
    <rect x="194" y="292" width="65" height="24" rx="6" fill="#22d3ee18" stroke="#22d3ee" stroke-width="0.5" stroke-opacity="0.4" />
    <text x="226.5" y="307" font-family="system-ui, -apple-system, sans-serif" font-size="10" font-weight="600" fill="#22d3ee" text-anchor="middle" letter-spacing="0.3">Tier A</text>

  <!-- IPFS document CID (bottom) -->
  <rect x="32" y="528" width="736" height="36" rx="8" fill="#18181b" opacity="0.6" />
  <text x="52" y="550" font-family="system-ui, -apple-system, sans-serif" font-size="9" fill="#71717a" letter-spacing="0.5">IPFS DOCUMENT</text>
  <text x="52" y="562" font-family="ui-monospace, monospace" font-size="10" fill="#38bdf8">QmXoypiz…Wo6uco</text>

  <!-- Bottom border accent -->
  <rect x="0" y="596" width="800" height="4" fill="url(#kg-INV20240001-accent)" rx="2" />
</svg>"
`;

exports[`generateInvoiceSvg — snapshot > minimal metadata output is stable 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 600" width="800" height="600" role="img" aria-labelledby="kg-INV20240001-title kg-INV20240001-desc">
  <title id="kg-INV20240001-title">Invoice INV-2024-0001 — Safaricom PLC</title>
  <desc id="kg-INV20240001-desc">Kora Protocol invoice NFT for $250.0K USDC due Mar 1, 2025</desc>

  <defs>
    <!-- Background gradient -->
    <linearGradient id="kg-INV20240001-bg" x1="0%" y1="0%" x2="100%" y2="100%">
      <stop offset="0%" stop-color="#09090b" />
      <stop offset="100%" stop-color="#0f0f12" />
    </linearGradient>
    <!-- Primary accent gradient -->
    <linearGradient id="kg-INV20240001-accent" x1="0%" y1="0%" x2="100%" y2="0%">
      <stop offset="0%" stop-color="#38bdf8" stop-opacity="0.8" />
      <stop offset="100%" stop-color="#38bdf8" stop-opacity="0.6" />
    </linearGradient>
    <!-- Glow filter -->
    <filter id="kg-INV20240001-glow" x="-20%" y="-20%" width="140%" height="140%">
      <feGaussianBlur stdDeviation="8" result="blur" />
      <feComposite in="SourceGraphic" in2="blur" operator="over" />
    </filter>
    <!-- Clip path for rounded card -->
    <clipPath id="kg-INV20240001-clip">
      <rect width="800" height="600" rx="16" ry="16" />
    </clipPath>
  </defs>

  <!-- Background -->
  <rect width="800" height="600" fill="url(#kg-INV20240001-bg)" rx="16" ry="16" />

  <!-- Decorative glow orbs -->
  <circle cx="680" cy="90" r="144" fill="#38bdf8" opacity="0.06" filter="url(#kg-INV20240001-glow)" />
  <circle cx="80" cy="510" r="112.00000000000001" fill="#38bdf8" opacity="0.05" filter="url(#kg-INV20240001-glow)" />

  <!-- Top accent bar -->
  <rect x="0" y="0" width="800" height="4" fill="url(#kg-INV20240001-accent)" rx="2" />

  <!-- Header section -->
  <rect x="32" y="24" width="736" height="72" rx="10" fill="#18181b" opacity="0.7" />

  <!-- Kora logo mark (stylised "K") -->
  <g transform="translate(52, 44)">
    <rect width="28" height="28" rx="6" fill="#0c4a6e" />
    <text x="14" y="20" font-family="system-ui, -apple-system, sans-serif" font-size="16" font-weight="700" fill="#38bdf8" text-anchor="middle">K</text>
  </g>

  <!-- "Kora Protocol" label -->
  <text x="92" y="54" font-family="system-ui, -apple-system, sans-serif" font-size="13" font-weight="600" fill="#f4f4f5" letter-spacing="0.5">Kora Protocol</text>
  <text x="92" y="72" font-family="system-ui, -apple-system, sans-serif" font-size="10" fill="#71717a" letter-spacing="1">INVOICE NFT</text>

  <!-- Invoice number (top right) -->
  <text x="752" y="54" font-family="ui-monospace, monospace" font-size="11" fill="#a1a1aa" text-anchor="end">INV-2024-0001</text>
  <text x="752" y="72" font-family="system-ui, -apple-system, sans-serif" font-size="10" fill="#71717a" text-anchor="end" letter-spacing="0.5">v1.0</text>

  <!-- Divider -->
  <line x1="32" y1="112" x2="768" y2="112" stroke="#27272a" stroke-width="1" />

  <!-- Debtor name (large) -->
  <text x="48" y="152" font-family="system-ui, -apple-system, sans-serif" font-size="22" font-weight="700" fill="#f4f4f5">Safaricom PLC</text>
  <text x="48" y="174" font-family="system-ui, -apple-system, sans-serif" font-size="12" fill="#71717a">DEBTOR</text>

  <!-- Amount (hero) -->
  <text x="752" y="152" font-family="system-ui, -apple-system, sans-serif" font-size="28" font-weight="800" fill="#f4f4f5" text-anchor="end">$250.0K USDC</text>
  <text x="752" y="174" font-family="system-ui, -apple-system, sans-serif" font-size="12" fill="#71717a" text-anchor="end">INVOICE AMOUNT</text>

  <!-- Divider -->
  <line x1="32" y1="196" x2="768" y2="196" stroke="#27272a" stroke-width="1" />

  <!-- Info grid row 1 -->
  <!-- Due Date -->
  <text x="48" y="228" font-family="system-ui, -apple-system, sans-serif" font-size="10" fill="#71717a" letter-spacing="1">DUE DATE</text>
  <text x="48" y="248" font-family="system-ui, -apple-system, sans-serif" font-size="15" font-weight="600" fill="#f4f4f5">Mar 1, 2025</text>

  <!-- Issuer -->
  <text x="400" y="228" font-family="system-ui, -apple-system, sans-serif" font-size="10" fill="#71717a" letter-spacing="1" text-anchor="middle">ISSUER</text>
  <text x="400" y="248" font-family="system-ui, -apple-system, sans-serif" font-size="13" font-weight="500" fill="#f4f4f5" text-anchor="middle">TechBridge Solutions Ltd</text>

  <!-- Discount Rate / Risk Tier -->
  

  <!-- Divider -->
  <line x1="32" y1="272" x2="768" y2="272" stroke="#27272a" stroke-width="1" />

  <!-- Tags row -->
  

  <!-- IPFS document CID (bottom) -->
  

  <!-- Bottom border accent -->
  <rect x="0" y="596" width="800" height="4" fill="url(#kg-INV20240001-accent)" rx="2" />
</svg>"
`;
